--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       --bg:#0b0f14; --panel:#0f1720; --muted:#9aa6b2; --gold:#d4af37; --glass:rgba(255,255,255,.04);
       --radius:16px; --radius-sm:12px; --shadow:0 6px 18px rgba(0,0,0,.5);
       --q-green:#3fb950; --q-yellow:#f2cc60; --q-red:#ff6b6b;
+      --pill:#2a3444; --pill-bd:rgba(255,255,255,.12);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -46,14 +47,18 @@
     .modal{position:fixed;inset:0;background:rgba(0,0,0,.55);display:none;align-items:center;justify-content:center;padding:14px;z-index:9999}
     .modal.on{display:flex}
     .panel{max-width:960px;width:100%;background:#0e141c;border:1px solid rgba(255,255,255,.08);border-radius:16px;display:grid;grid-template-columns:320px 1fr;max-height:90vh;overflow:auto}
+
+    .pill{display:inline-flex;align-items:center;gap:6px;background:var(--pill);border:1px solid var(--pill-bd);border-radius:999px;padding:2px 8px;font-size:12px}
     .chip{background:linear-gradient(90deg, rgba(212,175,55,.16), transparent);padding:3px 8px;border-radius:999px;color:#d4af37;font-weight:800;font-size:12px}
 
     .detail-left h4{margin:10px 0 6px;color:var(--gold)}
     .engr-box{min-height:220px;background:#0b121a;border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:12px;display:flex;flex-wrap:wrap;gap:6px;align-content:flex-start}
     .engr-box .chip{font-size:13px}
 
+    .equip-wrap{display:grid;grid-template-columns:1fr 1fr;gap:16px}
     .equip-list{display:grid;gap:8px}
     .equip-item{display:grid;grid-template-columns:42px 1fr 90px;gap:10px;align-items:center;background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:8px}
+    .equip-opts{background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:10px}
 
     .qbar{height:10px;border-radius:8px;background:rgba(255,255,255,.08);overflow:hidden}
     .qbar>i{display:block;height:10px;width:0}
@@ -66,8 +71,12 @@
     .tag.orange{background:rgba(255,173,80,.18);color:#ffd29a}
     .badge{display:inline-block;padding:2px 6px;border-radius:6px;background:rgba(255,255,255,.06);font-size:12px}
 
-    .gem-row{display:flex;gap:10px;align-items:center;padding:8px 0}
-    .gem-dot{width:14px;height:14px;border-radius:50%;background:#1e88e5;box-shadow:0 0 0 2px rgba(30,136,229,.25)}
+    /* 보석 */
+    .gem-row{display:flex;gap:8px;align-items:center;flex-wrap:wrap;padding:8px 0}
+    .gem{display:flex;flex-direction:column;align-items:center;gap:2px}
+    .gem img{width:28px;height:28px;object-fit:cover;border-radius:6px;border:1px solid rgba(255,255,255,.12)}
+    .gem .small{font-size:11px;color:#dcdcdc}
+
     .cards-row{display:flex;gap:10px;flex-wrap:wrap;margin-top:6px}
     .cards-row .card-item{width:72px}
     .cards-row .card-item img{width:72px;height:100px;object-fit:cover;border-radius:8px;border:1px solid rgba(255,255,255,.12)}
@@ -77,7 +86,7 @@
     .debug-btn{position:fixed;right:12px;bottom:12px;z-index:99999;background:#1d2633;border:1px solid rgba(255,255,255,.2);color:#ffd58a;border-radius:10px;padding:8px 10px;font-size:12px;cursor:pointer}
     .debug-panel{position:fixed;right:12px;bottom:52px;z-index:99999;width:min(92vw,520px);max-height:60vh;overflow:auto;background:#0c121a;border:1px solid rgba(255,255,255,.25);border-radius:10px}
     .debug-panel pre{margin:0;padding:10px;white-space:pre-wrap;word-break:break-all;font-size:12px;color:#cfe1ff}
-    @media (max-width:1100px){ .panel{grid-template-columns:1fr} }
+    @media (max-width:1100px){ .panel{grid-template-columns:1fr} .equip-wrap{grid-template-columns:1fr} }
   </style>
 </head>
 <body>
@@ -123,11 +132,23 @@
       </div>
 
       <div class="right" style="padding:14px">
-        <div style="font-weight:800;color:var(--gold);margin-bottom:6px">장비 상세</div>
-        <div id="equipList" class="equip-list"></div>
-        <div class="gem-row" id="gemRow"></div>
-        <div style="font-weight:800;color:var(--gold);margin-bottom:6px">카드</div>
-        <div id="cardsRow" class="cards-row"></div>
+        <div class="equip-wrap">
+          <div>
+            <div style="font-weight:800;color:var(--gold);margin-bottom:6px">장비</div>
+            <div id="equipList" class="equip-list"></div>
+          </div>
+          <div>
+            <div style="font-weight:800;color:var(--gold);margin-bottom:6px">옵션 상세</div>
+            <div id="equipOpts" class="equip-opts"></div>
+
+            <div style="height:10px"></div>
+            <div style="font-weight:800;color:var(--gold);margin-bottom:6px">보석</div>
+            <div class="gem-row" id="gemRow"></div>
+
+            <div style="font-weight:800;color:var(--gold);margin:10px 0 6px">카드</div>
+            <div id="cardsRow" class="cards-row"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -193,7 +214,6 @@
       if(/고급/.test(g))return'#66bb6a'; return'#9aa6b2';
     };
 
-    // tooltip flattener: contentStr/leftStr/rightStr/topStr까지 모조리 긁는다
     function flattenTooltip(raw){
       if(!raw) return [];
       let j={}; try{ j=JSON.parse(String(raw).replace(/\\"/g,'"')); }catch(_){ return String(raw).split(/\n/); }
@@ -219,15 +239,15 @@
         .filter(Boolean);
     }
 
-    // 옵션 라인(상/중/하)
     function extractAffixOptions(tooltipRaw){
-      return flattenTooltip(tooltipRaw)
-        .filter(s=>/^(상|중|하)\s/.test(s))
-        .map(s=>s.replace(/^(상|중|하)\s*/,'').trim())
-        .map((t,i,arr)=>({rank:/^상/.test(arr[i])?'상':/^중/.test(arr[i])?'중':'하',text:t}));
+      // 최종적으로 [{rank:'상|중|하', text:'...'}]
+      const lines = flattenTooltip(tooltipRaw)
+        .filter(s=>/^(상|중|하)\s/.test(s));
+      return lines.map(s=>{
+        const rank=s[0]; return {rank, text:s.replace(/^(상|중|하)\s*/,'').trim()};
+      });
     }
 
-    // 악세 상세
     function parseAccessoryDetails(tooltip){
       const L=flattenTooltip(tooltip);
       const J=L.join(' ');
@@ -240,13 +260,11 @@
       return {itemLevel:ilv?Number(ilv.replace(/,/g,'')):null, tier:tier?Number(tier):null, quality:q?Number(q):null, options};
     }
 
-    // 엘릭서 추출: 이름 + [부위] 효과 Lv.n
     function parseElixirFromTooltip(tooltip){
       const L=flattenTooltip(tooltip);
       if(!L.length) return null;
       const joined=L.join(' ');
       let name=null;
-      // [엘릭서] 다음의 "OO의 엘릭서" 이름
       const mName=joined.match(/\[엘릭서\][^가-힣A-Za-z]*(?:<[^>]+>)? *([가-힣A-Za-z ]+엘릭서)/i);
       if(mName) name=strip(mName[1]);
       const perks=[];
@@ -258,24 +276,19 @@
       return {name, perks};
     }
 
-    // 상재련/강화/단계 파싱
     function parseMeta(tooltip, name, grade){
       const L=flattenTooltip(tooltip);
       const plain=L.join(' ')+' '+(name||' ')+' '+(grade||' ');
       const enhance=(plain.match(/\+\s*(\d{1,2})\b/)||[])[1];
       const upperX=(plain.match(/x\s*(\d{1,2})\b/i)||[])[1];
-      // [상급 재련] 30단계 → 숫자만 뽑기
       const upperStage=(plain.replace(/<[^>]+>/g,' ').match(/상급\s*재련[^0-9]*([0-9]{1,2})\s*단계/i)||[])[1];
-      const step=(plain.match(/(\d{1,2})\s*단계/i)||[])[1]; // 일반 단계 백업
+      const step=(plain.match(/(\d{1,2})\s*단계/i)||[])[1];
       const tier=(plain.match(/티어\s*([0-9])/i)||[])[1];
-
-      // 엘릭서 %/Lv 보조 (정보만 유지)
       let elixir=null;
       const mE1=plain.match(/엘릭서[^0-9]*([0-9]{1,3}(?:\.[0-9]+)?)%/i);
       if(mE1) elixir={percent:Number(mE1[1])};
       const mE2=plain.match(/엘릭서[^L]*Lv\.?\s*([0-9]{1,2})/i);
       if(!elixir && mE2) elixir={level:Number(mE2[1])};
-
       return {
         enhance:enhance?Number(enhance):null,
         upper: upperX?Number(upperX): (upperStage?Number(upperStage):null),
@@ -318,17 +331,17 @@
         equipment:(equips||[]).map(x=>{
           x=x||{};
           const nm=x.Name||'', gr=x.Grade||'', tp=x.Tooltip||'', ic=x.Icon||'';
-          // 품질: Quality가 null이면 qualityValue 사용
-          const quality = (x.Quality ?? x.quality ?? x.qualityValue ?? x.QualityValue ?? null);
+          const qAny = (x.Quality ?? x.quality ?? x.qualityValue ?? x.QualityValue ?? null);
+          const quality = (qAny!=null) ? Number(qAny) : null;
           const isAcc=/(목걸이|귀걸이|반지)/.test(String(x.Type||x.Slot||'')+' '+nm);
           const isBracelet=/팔찌/.test(String(x.Type||x.Slot||'')+' '+nm);
           const isStone=/스톤|어빌리티\s*스톤/.test(String(x.Type||x.Slot||'')+' '+nm);
           return {
             type:x.Type||x.Slot||'',
             name:nm, grade:gr, icon:ic,
-            quality: typeof quality==='number'? quality : (quality!=null? Number(quality): null),
+            quality: Number.isFinite(quality)? quality : null,
             tooltip:tp,
-            lines: extractAffixOptions(tp).map(o=> (o.rank==='상'?'상 ':'중 '=='중 '? '중 ':'하 ')+o.text) /* 레거시 호환 */,
+            opt: extractAffixOptions(tp),         // [{rank,text}]
             meta: parseMeta(tp,nm,gr),
             acc: isAcc? parseAccessoryDetails(tp) : null,
             elixir: parseElixirFromTooltip(tp),
@@ -388,13 +401,15 @@
 
       // 장비
       const list=d.equipment||[]; const wrap=$('#equipList'); wrap.innerHTML='';
+      const optsBox=$('#equipOpts'); optsBox.innerHTML='<div class="small">아이템을 클릭하면 옵션이 오른쪽에 표시됩니다</div>';
       const pct=x=>Math.max(0,Math.min(100,Number(x)||0));
-      list.forEach(e=>{
-        const row=document.createElement('div'); row.className='equip-item';
+
+      list.forEach((e,idx)=>{
+        const row=document.createElement('div'); row.className='equip-item'; row.tabIndex=0;
 
         const icon=document.createElement('img');
         icon.src=e.icon||'https://via.placeholder.com/42';
-        icon.style.cssText='width:42px;height:42px;border-radius:8px;object-fit:cover;border:1px solid rgba(255,255,255,.12)';
+        icon.alt=''; icon.style.cssText='width:42px;height:42px;border-radius:8px;object-fit:cover;border:1px solid rgba(255,255,255,.12)';
 
         const mid=document.createElement('div');
         const metaBits=[];
@@ -409,50 +424,87 @@
           ${metaBits.length? `<span class="badge">${metaBits.join(' · ')}</span>`:''}
         </div>`;
 
-        let opts='';
-        if(e.acc){
-          const a=e.acc; const pills=[];
-          if(typeof a.quality==='number') pills.push('품질 '+a.quality);
-          if(a.itemLevel) pills.push('Lv.'+a.itemLevel);
-          if(a.tier) pills.push('T'+a.tier);
-          if(pills.length) opts+=`<div class="opt-mini">${pills.map(t=>`<span class="badge">${esc(t)}</span>`).join(' ')}</div>`;
-          if(a.options && a.options.length){
-            opts += a.options.map(op=>{
-              const g=op.rank==='상'?'orange':op.rank==='중'?'purple':'blue';
-              return `<div class="opt-line"><span class="tag ${g}">${op.rank}</span><span class="small">${esc(op.text)}</span></div>`;
-            }).join('');
-          }else opts += `<div class="small">부여 옵션 없음</div>`;
-        }else{
-          const lines=(e.lines||[]);
-          opts += lines.length? lines.map(line=>{
-            const head=line[0]; const g=head==='상'?'orange':head==='중'?'purple':'blue';
-            return `<div class="opt-line"><span class="tag ${g}">${head}</span><span class="small">${esc(line.slice(1).trim())}</span></div>`;
-          }).join('') : `<div class="small">부여 옵션 없음</div>`;
-        }
+        const subPills=[];
+        const acc=e.acc;
+        const qsrc = (acc && typeof acc.quality==='number') ? acc.quality : (typeof e.quality==='number'? e.quality : null);
+        if(typeof qsrc==='number') subPills.push('품질 '+qsrc);
+        if(acc && acc.itemLevel) subPills.push('Lv.'+acc.itemLevel);
+        if(acc && acc.tier) subPills.push('T'+acc.tier);
+        const subHtml = subPills.length? `<div class="opt-mini">${subPills.map(t=>`<span class="pill">${esc(t)}</span>`).join(' ')}</div>` : '';
 
-        // 엘릭서 표시
-        if(e.elixir){
-          const el=e.elixir;
-          const nameHtml = el.name? `<span class="badge">엘릭서: ${esc(el.name)}</span>` : `<span class="badge">엘릭서</span>`;
-          const perkHtml = (el.perks||[]).map(p=>`<div class="opt-line"><span class="tag purple">${esc(p.slot)}</span><span class="small">${esc(p.stat)} Lv.${p.lv}</span></div>`).join('');
-          opts += `<div style="margin-top:6px">${nameHtml}</div>${perkHtml}`;
-        }
-
-        mid.innerHTML=title+opts;
+        mid.innerHTML=title+subHtml;
 
         const right=document.createElement('div');
-        const qsrc = (e.acc && typeof e.acc.quality==='number') ? e.acc.quality : (typeof e.quality==='number'? e.quality : null);
         right.innerHTML = (qsrc!=null)
           ? `<div class="qbar"><i style="width:${pct(qsrc)}%;background:linear-gradient(90deg,var(--q-green),var(--q-yellow),var(--q-red))"></i></div><div class="small" style="margin-top:4px;text-align:center">${qsrc}</div>`
           : `<div class="small" style="text-align:center;color:var(--muted)">-</div>`;
+
+        // 클릭 시 옵션 패널 채우기
+        row.addEventListener('click', ()=>{
+          const opts=[];
+          // 엘릭서 먼저
+          if(e.elixir){
+            const head = `<div class="pill">엘릭서 ${e.elixir.name?('· '+esc(e.elixir.name)) : ''}</div>`;
+            const perkHtml = (e.elixir.perks||[]).map(p=>
+              `<div class="opt-line"><span class="tag purple">${esc(p.slot)}</span><span class="small">${esc(p.stat)} Lv.${p.lv}</span></div>`
+            ).join('');
+            opts.push(head, perkHtml);
+          }
+          // 상/중/하 옵션
+          const arr = (e.acc && e.acc.options && e.acc.options.length) ? e.acc.options : (e.opt||[]);
+          if(arr.length){
+            opts.push('<div style="height:6px"></div>');
+            arr.forEach(op=>{
+              const rk = op.rank || (op.text||'').slice(0,1);
+              const g=rk==='상'?'orange':rk==='중'?'purple':'blue';
+              const text = op.text || (op||'').toString();
+              opts.push(`<div class="opt-line"><span class="tag ${g}">${rk}</span><span class="small">${esc(text)}</span></div>`);
+            });
+          }else{
+            opts.push('<div class="small">부여 옵션 없음</div>');
+          }
+
+          // 팔찌/스톤 보조
+          if(e.bracelet && (e.bracelet.options||[]).length){
+            opts.push('<div style="height:6px"></div><div class="pill">팔찌</div>');
+            e.bracelet.options.forEach(o=>{ opts.push(`<div class="small">· ${esc(o.stat)} ${esc(o.value)}</div>`); });
+          }
+          if(e.stone && (e.stone.lines||[]).length){
+            opts.push('<div style="height:6px"></div><div class="pill">어빌리티 스톤</div>');
+            e.stone.lines.forEach(o=>{ opts.push(`<div class="small">· ${esc(o.name)}${o.lv?(' Lv.'+o.lv):''}</div>`); });
+          }
+
+          optsBox.innerHTML = opts.join('');
+        });
+
         row.appendChild(icon); row.appendChild(mid); row.appendChild(right);
         wrap.appendChild(row);
+        if(idx===0) row.click(); // 첫 아이템 자동 표시
       });
 
-      // 보석
+      // 보석 (아이콘 기반)
       const gemRow=$('#gemRow'); gemRow.innerHTML='';
-      const g=d.gems||{}; const total=(g.counts?(g.counts.damage+g.counts.cooldown):0)||11;
-      for(let i=0;i<total;i++){ const dot=document.createElement('div'); dot.className='gem-dot'; gemRow.appendChild(dot); }
+      const g=d.gems||{};
+      const items = (g.list && Array.isArray(g.list)) ? g.list
+                   : (g.items && Array.isArray(g.items)) ? g.items
+                   : [];
+      const fallback = 'https://jangstar00.github.io/yong/images/gem_default.png';
+      const total = items.length || (g.counts?(g.counts.damage+g.counts.cooldown):0) || 11;
+      if(items.length){
+        items.forEach(it=>{
+          const div=document.createElement('div'); div.className='gem';
+          const img=document.createElement('img'); img.src=it.icon||fallback; img.alt='';
+          const cap=document.createElement('span'); cap.className='small'; cap.textContent = it.level?('Lv.'+it.level):'';
+          div.appendChild(img); div.appendChild(cap); gemRow.appendChild(div);
+        });
+      }else{
+        for(let i=0;i<total;i++){
+          const div=document.createElement('div'); div.className='gem';
+          const img=document.createElement('img'); img.src=fallback; img.alt='';
+          const cap=document.createElement('span'); cap.className='small'; cap.textContent='';
+          div.appendChild(img); div.appendChild(cap); gemRow.appendChild(div);
+        }
+      }
       if(g.avgLevel){ const info=document.createElement('span'); info.className='small'; info.style.marginLeft='6px'; info.textContent='평균 Lv. '+g.avgLevel; gemRow.appendChild(info); }
 
       // 카드
@@ -473,11 +525,11 @@
         const results = await Promise.allSettled(ADMIN_CHARACTERS.map(fetchChar));
         const list = results.map((r,i)=> r.status==='fulfilled'? r.value : mockChar(ADMIN_CHARACTERS[i]));
         renderGrid(list);
-        try{ localStorage.setItem('gridCache_v15', JSON.stringify(list)); }catch(_){}
+        try{ localStorage.setItem('gridCache_v16', JSON.stringify(list)); }catch(_){}
         setStatus('완료');
       }catch(err){
         __dbg('refreshAll ERR', String(err && err.message || err));
-        try{ const cache = localStorage.getItem('gridCache_v15'); if(cache){ renderGrid(JSON.parse(cache)); setStatus('오프라인 캐시 표시'); return; } }catch(_){}
+        try{ const cache = localStorage.getItem('gridCache_v16'); if(cache){ renderGrid(JSON.parse(cache)); setStatus('오프라인 캐시 표시'); return; } }catch(_){}
         renderGrid(ADMIN_CHARACTERS.map(mockChar)); setStatus('네트워크 실패: 모의 데이터 표시');
       }
     }
